<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/explorer_endpointurl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Explorer_endpointHint"
            android:lines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/apispinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/querystring"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:text="@string/Explorer_querystring" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioBtnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/Explorer_post" />

            <RadioButton
                android:id="@+id/radioBtnGet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Explorer_get" />
        </RadioGroup>

        <Button
            android:id="@+id/explorer_sumit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/OK" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="5dp"
        android:background="@android:color/black"
        android:orientation="horizontal" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>