<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/param_key_add"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:hint="@string/Explorer_querystring_key"
            android:lines="1"
            android:singleLine="true" />

        <EditText
            android:id="@+id/param_value_add"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/Explorer_querystring_value"
            android:lines="1"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/param_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/add_icon" />
    </LinearLayout>

    <View
        android:id="@+id/param_divider"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/darker_gray"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:orientation="horizontal" >

        <ListView
            android:id="@id/android:list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="2dp"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/querystring_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/OK" >
    </Button>

</LinearLayout>